WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118538
Handle "load,provisional,failed" with the on_error callback on EFL MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=118538
Summary
Handle "load,provisional,failed" with the on_error callback on EFL MiniBrowser
Sergio Correia (qrwteyrutiyoup)
Reported
2013-07-10 14:53:55 PDT
Handle "load,provisional,failed" with the on_error callback on EFL MiniBrowser
Attachments
Patch
(2.21 KB, patch)
2013-07-10 14:55 PDT
,
Sergio Correia (qrwteyrutiyoup)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Correia (qrwteyrutiyoup)
Comment 1
2013-07-10 14:55:59 PDT
Created
attachment 206414
[details]
Patch
Chris Dumez
Comment 2
2013-07-10 23:38:58 PDT
Comment on
attachment 206414
[details]
Patch Looks sane. r=me.
WebKit Commit Bot
Comment 3
2013-07-11 00:01:03 PDT
Comment on
attachment 206414
[details]
Patch Clearing flags on attachment: 206414 Committed
r152560
: <
http://trac.webkit.org/changeset/152560
>
WebKit Commit Bot
Comment 4
2013-07-11 00:01:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug