Handle "load,provisional,failed" with the on_error callback on EFL MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=118538

Patch by Sergio Correia <sergio.correia@openbossa.org> on 2013-07-10
Reviewed by Christophe Dumez.

When attempting some odd url such as ``foo'', MiniBrowser will now show an
error message such as "Cannot resolve hostname (foo)".

Previously, it had the following behavior if MiniBrowser was started with
such urls, e.g ``./MiniBrowser foo'':

- Debug:
It wouldt hit WebKit2/Platform/CoreIPC/unix/ConnectionUnix.cpp(460) and crash.

- Release:
No asserts, naturally, but the view would remain blank, even if we tried to
change to a valid url.

* MiniBrowser/efl/main.c:
(window_create):

Canonical link: https://commits.webkit.org/136503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152560 268f45cc-cd09-0410-ab3c-d52691b4dbfc